Add test driver